added more tiles and added slider functionality

--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "brightness": "^3.0.0",
+    "node-brightness": "^0.2.1",
+    "node-gyp": "^8.4.0",
+    "node-wifi": "^2.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "wifi.js": "^4.1.1",
+    "wifiscanner": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
