--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
+    "wifi-control": "^2.0.1",
     "wifi.js": "^4.1.1",
     "wifiscanner": "^1.0.1"
   },
